# ZeroMQ-hello-world-docker-cpp

./: .gitignore  CMakeLists.txt  README.md  clion-configuration.md  docker-compose.yml
output/: zmq_hello_world
zmq-hello-world-client-node/: CMakeLists.txt  Dockerfile  run.sh  ssh_config
zmq-hello-world-client-node/src/: hwclient.cpp
zmq-hello-world-server-node/: CMakeLists.txt  Dockerfile
